# BFStats

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
.github/workflows/: ci.yml  ci2.yml
discord/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  sqlx-data.json
discord/src/: battlelog.rs  global_data.rs  images.rs  logging.rs  main.rs  models.rs  stats.rs  vip.rs
discord/src/battlelog/: client.rs  models.rs
discord/src/commands/: id.rs  mod.rs  rank.rs  search.rs  top.rs  vip.rs
discord/templates/: PlayerRank.html  ServerRanks.html  ServerSuicides.html  ServerTeamkills.html  ServerTeamkillsByHour.html
discord/templates/script_helpers/: to_int.rhai
imageapi/: Dockerfile  package-lock.json  package.json
imageapi/public/: battlelog.css  bf4-static.css  bf4.css  own.css
imageapi/src/: server.mjs
src/: html_png.rs  images.rs  main.rs  models.rs  stats.rs
templates/: Scoreboard.html  ServerRanks.html  ServerSuicides.html  ServerTeamkills.html  ServerTeamkillsByHour.html
